--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "@react-three/drei": "^9.77.4",
     "@react-three/fiber": "^8.13.4",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "emailjs": "^4.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
+    "react-typical": "^0.1.3",
     "sort-by": "^1.2.0",
     "swiper": "^9.4.1",
-    "three": "^0.153.0",
-    "react-typical": "^0.1.3"
+    "three": "^0.153.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
