--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.14.0",
     "@react-three/drei": "^9.77.4",
     "@react-three/fiber": "^8.13.4",
     "animate.css": "^4.1.1",
@@ -18,9 +19,9 @@
     "emailjs": "^4.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.5",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
